# reli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: hoi_detected.yaml  hoi_oracle.yaml  pose.yaml  robust.yaml  smoke.yaml
docs/: architecture.md  research_spec.md
notebooks/: colab_launcher.ipynb
reference/: relipose_prototype.ipynb  relipose_prototype.py
scripts/: check_data.py  smoke_test.py  train.py
src/relipose_hoi/: __init__.py  checkpoint.py  config.py  corruption.py  losses.py  structures.py  training.py
src/relipose_hoi/data/: __init__.py  coco.py  hico.py  transforms.py
src/relipose_hoi/models/: __init__.py  backbone.py  detection.py  model.py  pair.py  pose.py  reasoning.py  reliability.py  roi.py
tests/: test_data.py  test_losses.py  test_model.py  test_pose.py  test_reasoning.py  test_training.py
